--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,21 @@
 energy_data/*.json
 examples/video/energy_data/*.json
 # 1) Allow the profiling folder (so Git will descend into it)
-!examples/ml/profiling/
+# !examples/ml/profiling/
 
 # 2) Still ignore *everything* under profiling by default…
-examples/ml/profiling/*
-
+# examples/ml/profiling/*
+# 
 # 3) Except whitelist the machine_learning sub‐dir itself:
-!examples/ml/profiling/machine_learning*/
+# !examples/ml/profiling/machine_learning*/
 
 # 4) And finally whitelist all .json in that subdir:
-!examples/ml/profiling/machine_learning*/*.json
+# !examples/ml/profiling/machine_learning*/*.json
+# model
+# examples/*/models/
+
+# images (maybe provisinal)
+# examples/*/images/
 
 # Byte-compiled / optimized / DLL files
 **/__pycache__/
@@ -140,11 +145,6 @@ dmypy.json
 # Pyright type checker
 .pyright/
 
-# model
-examples/*/models/
-
-# images (maybe provisinal)
-examples/*/images/
 
 
 # vscode, formatting...
