--- a/examples/titanic/requirements.txt
+++ b/examples/titanic/requirements.txt
@@ -1,7 +1,10 @@
 # Required packages for the Titanic example
-scikit-learn>=1.3.0
-pandas>=1.5.0
-numpy>=1.20.0
+# Compatible versions for AWS Lambda Python 3.10 runtime
+numpy==1.24.3
+scipy==1.10.1
+pandas==2.0.3
+scikit-learn==1.3.0
+joblib==1.3.1
 wrapt>=1.14.0
 smart-open>=6.0.0
 dataplug
