--- a/examples/ml/Dockerfile.arm64
+++ b/examples/ml/Dockerfile.arm64
@@ -1,6 +1,22 @@
-# AWS Lambda ARM64 Runtime for Titanic Project
+# AWS Lambda ARM64 Runtime for ML Project
 # Using proper ARM64 base image for AWS Lambda
-FROM public.ecr.aws/lambda/python:3.10-arm64
+FROM  public.ecr.aws/lambda/python:3.10-arm64
+
+# Install system dependencies
+RUN yum update -y \
+    && yum install -y \
+        gcc \
+        gcc-c++ \
+        make \
+        cmake3 \
+        unzip \
+        vim \
+        git \
+        gfortran \
+        blas-devel \
+        lapack-devel \
+        python3-devel \
+    && yum clean all
 
 # Define custom function directory
 ARG FUNCTION_DIR="/function"
@@ -8,7 +24,7 @@ ARG FUNCTION_DIR="/function"
 # Create function directory
 RUN mkdir -p ${FUNCTION_DIR}
 
-# Install Python dependencies first (these don't require yum)
+# Install Python dependencies
 RUN pip install --upgrade --ignore-installed pip wheel six setuptools \
     && pip install --upgrade --no-cache-dir --ignore-installed \
         awslambdaric \
@@ -19,8 +35,11 @@ RUN pip install --upgrade --ignore-installed pip wheel six setuptools \
         numpy==1.24.3 \
         scipy==1.10.1 \
         pandas>=1.5.0 \
-        scikit-learn>=1.3.0 \
+        scikit-learn==1.2.2 \
+        lightgbm>=4.0.0 \
         joblib>=1.2.0 \
+        minio>=7.0.0 \
+        kubernetes>=18.0.0 \
         wrapt>=1.14.0 \
         smart-open>=6.0.0 \
         pika \
@@ -30,17 +49,8 @@ RUN pip install --upgrade --ignore-installed pip wheel six setuptools \
         tblib \
         psutil
 
-# Try to install system dependencies with retries and fallbacks
-RUN yum clean all && yum makecache || true
-RUN yum update -y || echo "Update failed, continuing..." \
-    && yum install -y \
-        gcc \
-        gcc-c++ \
-        make \
-        unzip \
-        vim \
-        python3-devel \
-    || echo "Some packages failed to install, continuing..."
+# Install Lithops fork directly from GitHub (Green Computing Lithops fork with additional features)
+RUN pip install --upgrade --no-cache-dir git+https://github.com/Green-Computing-Lithops/lithops_fork.git
 
 # Set working directory to function root directory
 WORKDIR ${FUNCTION_DIR}
