--- a/examples/titanic/Dockerfile.arm64
+++ b/examples/titanic/Dockerfile.arm64
@@ -11,6 +11,7 @@ RUN yum update -y \
         cmake3 \
         unzip \
         vim \
+        git \
         gfortran \
         blas-devel \
         lapack-devel \
@@ -34,7 +35,7 @@ RUN pip install --upgrade --ignore-installed pip wheel six setuptools \
         numpy==1.24.3 \
         scipy==1.10.1 \
         pandas>=1.5.0 \
-        scikit-learn>=1.3.0 \
+        scikit-learn==1.2.2 \
         joblib>=1.2.0 \
         wrapt>=1.14.0 \
         smart-open>=6.0.0 \
@@ -44,6 +45,9 @@ RUN pip install --upgrade --ignore-installed pip wheel six setuptools \
         ps-mem \
         tblib \
         psutil
+
+# Install Lithops fork directly from GitHub (Green Computing Lithops fork with additional features)
+RUN pip install --upgrade --no-cache-dir git+https://github.com/Green-Computing-Lithops/lithops_fork.git
 
 # Set working directory to function root directory
 WORKDIR ${FUNCTION_DIR}
