Remove AWS credentials from config files and add to .gitignore
- Remove config_aws.yaml, config_local.yaml, config_processed.yaml, config.yaml from tracking
- Add config files to .gitignore to prevent future credential commits
- Create config_aws.yaml.example as template with placeholder values
- Resolves GitHub push protection issue for AWS secrets

--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,12 @@ celerybeat-schedule.*
 .venv
 .env.example
 
+# Configuration files with credentials
+config_aws.yaml
+config_local.yaml
+config_processed.yaml
+config.yaml
+
 
 # virtualenv
 venv/
