chore: remove elements

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,8 @@ dmypy.json
 # avoid only for the runtime creation ---> remove from the folder 
 # lithops_fork
 test-bucket/titanic/old/titanic_60Mb.csv
+aws_credentials.md
+**/credentials*
+**/*credential*
+*.pem
+*.key
