feat: adding new results and modifications for the plot generation

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,12 @@ aws_credentials.md
 **/*credential*
 *.pem
 *.key
+
+
+
+
+# ignore images changes : 
+examples/general_usage/plot_generation/architecture_analysis_output
+examples/general_usage/plot_generation/combined_plots_output
+examples/general_usage/plot_generation/min_max_plots_output
+# examples/general_usage/plot_generation/analysis_results
