feat: analisis tabla general and and remove elements

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,4 @@ examples/general_usage/plot_generation/architecture_analysis_output
 examples/general_usage/plot_generation/combined_plots_output
 examples/general_usage/plot_generation/min_max_plots_output
 # examples/general_usage/plot_generation/analysis_results
+,mjmk,l.;k
